# merger

./: Cargo.toml  README.md  bar.yml  foo.yml
src/: main.rs
